--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-       "version": 2,
-       "routes": [
-         {
-           "src": "/(.*)",
-           "dest": "/$1"
-         }
-       ]
-     }
+    "version": 2,
+    "functions": {
+        "api/**/*.php": { runtime: "vercel-php@0.6.0" },
+    },
+    "routes": [
+        { src: "/(.*)", dest: "/api/index.php" }
+    ],
+    }
